secondfile/objects/RDS_IPFLEX_Details__c.object
<CustomObject>
    <fields>
        <fullName>Backdoor_links__c</fullName>
        <label>Backdoor links</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Telephone_Number__c</fullName>
        <label>Billing Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Router_Model__c</fullName>
        <label>CE Router Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Router_Software_Version__c</fullName>
        <label>CE Router Software Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Router_Vendor_or_Mfg__c</fullName>
        <label>CE Router Vendor or Mfg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CODEC__c</fullName>
        <label>CODEC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPE_Certification_Status__c</fullName>
        <label>CPE Certification Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Request_document_status__c</fullName>
        <label>CSR Request document status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Forwarding_required__c</fullName>
        <label>Call Forwarding required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_preservation_required__c</fullName>
        <label>Call preservation required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calling_Name_Display__c</fullName>
        <label>Calling Name Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collect_Calling_and_3rd_Party_Billing__c</fullName>
        <label>Collect Calling and 3rd Party Billing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Specified_CNAM__c</fullName>
        <label>Customer Specified CNAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_IPFlex_on_AVPN_Outside_Move__c</fullName>
        <label>Date of IPFlex on AVPN Outside Move</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_IPFlex_on_MIS_Outside_Move__c</fullName>
        <label>Date of IPFlex on MIS Outside Move</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dir_Listing_Dir_Assistance_for_Address__c</fullName>
        <label>Dir Listing &amp; Dir Assistance for Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Directory_Listing_for_Phone_Number__c</fullName>
        <label>Directory Listing for Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enhanced_Features_Services__c</fullName>
        <label>Enhanced Features Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPFlex_Reach_Private_Dial_Plan__c</fullName>
        <label>IPFlex Reach Private Dial Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPFlex_Reach_Traffic_Type__c</fullName>
        <label>IPFlex Reach Traffic Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Flexible_Reach_Calling_Plan__c</fullName>
        <label>IP Flexible Reach Calling Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_Vendor_Model_Name_Release_Version__c</fullName>
        <label>IVR Vendor Model Name Release Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IVR_behind_the_PBX_or_Standalone__c</fullName>
        <label>IVR behind the PBX or Standalone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Alternate_Call_Routing__c</fullName>
        <label>Inbound Alternate Call Routing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listed_Name__c</fullName>
        <label>Listed Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listed_Number__c</fullName>
        <label>Listed Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_Category__c</fullName>
        <label>Listing Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_Option__c</fullName>
        <label>Listing Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Phone_Number_Primary_NPA_NXX__c</fullName>
        <label>Local Phone Number Primary NPA NXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Phone_Number_Secondary_NPA_NXX__c</fullName>
        <label>Local Phone Number Secondary NPA NXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Billing_Telephone_Number__c</fullName>
        <label>New Billing Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Concurrent_Calls__c</fullName>
        <label>No of Concurrent Calls</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Local_Phone_Numbers__c</fullName>
        <label>Number of Local Phone Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_SBCs_for_the_site__c</fullName>
        <label>Number of SBCs for the site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Virtual_Phone_Numbers__c</fullName>
        <label>Number of Virtual Phone Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_static_IP_addresses__c</fullName>
        <label>Number of static IP addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_Interface_Type__c</fullName>
        <label>PBX Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_Model_Session_Manager__c</fullName>
        <label>PBX Model &amp; Session Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_Model__c</fullName>
        <label>PBX Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_Software_Version__c</fullName>
        <label>PBX Software Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_Type__c</fullName>
        <label>PBX Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_Vendor_Mfg__c</fullName>
        <label>PBX Vendor Mfg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_or_Voice_CPE_POC_Email__c</fullName>
        <label>PBX or Voice CPE POC Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_or_Voice_CPE_POC_First_Name__c</fullName>
        <label>PBX or Voice CPE POC First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_or_Voice_CPE_POC_Last_Name__c</fullName>
        <label>PBX or Voice CPE POC Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_or_Voice_CPE_POC_Phone_Number__c</fullName>
        <label>PBX or Voice CPE POC Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POTS_Phone_Number__c</fullName>
        <label>POTS Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POTS_for_testing_router__c</fullName>
        <label>POTS for testing router</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_note_any_exceptions__c</fullName>
        <label>Please note any exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Type__c</fullName>
        <label>Port Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portable_Numbers_on_Existing_IPFlex_Plan__c</fullName>
        <label>Porting number from a Non-AT&amp;T Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Administrator_Email_Address__c</fullName>
        <label>Portal Administrator Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Administrator_First_Name__c</fullName>
        <label>Portal Administrator First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Administrator_Last_Name__c</fullName>
        <label>Portal Administrator Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Administrator_Phone_Number__c</fullName>
        <label>Portal Administrator Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Premise_Details__c</fullName>
        <label>RDS-Premise Details</label>
        <referenceTo>RDS_Premise_Details__c</referenceTo>
        <relationshipLabel>RDS-IPFLEX Details</relationshipLabel>
        <relationshipName>RDS_IPFLEX_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Center__c</fullName>
        <label>Rate Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Req_to_sup_IPFlex_on_AVPN_Outside_Move__c</fullName>
        <label>Moving existing IP Flex to new site AVPN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Req_to_sup_IPFlex_on_MIS_Outside_Move__c</fullName>
        <label>Moving existing IP Flex to new site MIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Shipping_Address_1__c</fullName>
        <label>Router Shipping Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Shipping_City__c</fullName>
        <label>Router Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Shipping_First_Name__c</fullName>
        <label>Router Shipping First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Shipping_Floor_Number__c</fullName>
        <label>Router Shipping Floor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Shipping_Last_Name__c</fullName>
        <label>Router Shipping Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Shipping_Phone_Number__c</fullName>
        <label>Router Shipping Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Shipping_Room_Number__c</fullName>
        <label>Router Shipping Room Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Shipping_State__c</fullName>
        <label>Router Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Router_Shipping_Zip_Code__c</fullName>
        <label>Router Shipping Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_Name__c</fullName>
        <label>SBC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_Software_Version__c</fullName>
        <label>SBC Software Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_Vendor__c</fullName>
        <label>SBC Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_cascaded_integrated_with_CE_Router__c</fullName>
        <label>SBC cascaded/integrated with CE Router</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Call_Phone_Number1__c</fullName>
        <label>Test Call Phone Number1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Call_Phone_Number2__c</fullName>
        <label>Test Call Phone Number2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trunk_Call_Routing_Management_Required__c</fullName>
        <label>Trunk Call Routing Management Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Using_BGPR__c</fullName>
        <label>Using BGPR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VQM_Type__c</fullName>
        <label>VQM Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Phone_Number_Primary_NPA_NXX__c</fullName>
        <label>Virtual Phone Number Primary NPA NXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Phone_Number_Secondary_NPA_NXX__c</fullName>
        <label>Virtual Phone Number Secondary NPA NXX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_the_port_include_fax_number__c</fullName>
        <label>Will the port include fax number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDS-IPFLEX Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>RDS-IPFLEX Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-IPFLEX Details</pluralLabel>
    <recordTypes>
        <fullName>Only_MIS_Plus</fullName>
        <active>true</active>
        <description>This record type will be used only if the MIS order has Managed Router and not IPFLEX</description>
        <label>Only MIS Plus</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>